Various fixes for speed improvements
Various fixes for speed improvements

--- a/deeplearning1/nbs/sgd-intro.ipynb
+++ b/deeplearning1/nbs/sgd-intro.ipynb
@@ -70,16 +70,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.2764,  0.3057,  0.4897,  0.787 ,  0.6627,  0.6034,  0.3722,  0.1886,  0.4145,  0.6801,\n",
-       "        0.5178,  0.4675,  0.3708,  0.9557,  0.1604,  0.4065,  0.8752,  0.6775,  0.1818,  0.2346,\n",
-       "        0.591 ,  0.9049,  0.9551,  0.3547,  0.7319,  0.5636,  0.7542,  0.7464,  0.2111,  0.1858])"
+       "array([ 0.2512,  0.5146,  0.8023,  0.293 ,  0.4106,  0.3832,  0.852 ,  0.583 ,  0.6944,  0.2702,\n",
+       "        0.6431,  0.1577,  0.3531,  0.0043,  0.5613,  0.9786,  0.7477,  0.1809,  0.9352,  0.6228,\n",
+       "        0.3445,  0.9943,  0.9327,  0.1637,  0.9509,  0.2711,  0.8829,  0.7033,  0.3737,  0.8109])"
       ]
      },
      "execution_count": 5,
@@ -94,17 +92,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  8.8293,   8.9171,   9.4692,  10.3611,   9.9881,   9.8102,   9.1167,   8.5659,   9.2436,\n",
-       "        10.0403,   9.5534,   9.4025,   9.1125,  10.8671,   8.4813,   9.2196,  10.6257,  10.0326,\n",
-       "         8.5453,   8.7038,   9.7731,  10.7148,  10.8654,   9.064 ,  10.1956,   9.6907,  10.2627,\n",
-       "        10.2393,   8.6334,   8.5573])"
+       "array([  8.7536,   9.5438,  10.4068,   8.8791,   9.2319,   9.1495,  10.5561,   9.7489,  10.0831,\n",
+       "         8.8105,   9.9294,   8.4732,   9.0592,   8.0128,   9.6838,  10.9359,  10.2432,   8.5426,\n",
+       "        10.8056,   9.8683,   9.0336,  10.983 ,  10.7981,   8.4911,  10.8528,   8.8132,  10.6486,\n",
+       "        10.11  ,   9.1212,  10.4327])"
       ]
      },
      "execution_count": 6,
@@ -119,14 +115,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f57280e7dd0>"
+       "<matplotlib.collections.PathCollection at 0x1a553e28c88>"
       ]
      },
      "execution_count": 7,
@@ -135,9 +129,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAANgAAADICAYAAACK9i92AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEoNJREFUeJzt3X2QVNWZx/HvIzLDZBVEnWBEGLK+xBl3LQcWnLLyAhFK\nY2VDEpMglvFtghgK1GzFMpukVt1k3ZiY7GoSCrRGNMk6TioxanzZqBF0LReHIIpKo7g6w4su6UTU\nUIsw4rN/3DvSND1D07dPv/4+VV3cvn27z2noh3vuOec+x9wdEQnjoHJXQKSWKcBEAlKAiQSkABMJ\nSAEmEpACTCSg/QaYmXWZ2VYzW5ux7wtm9ryZ7TazycO890wzW29mL5nZVcWqtEi1yOcMtgw4I2vf\nc8DngMeGepOZHQT8JH7vScBcMzuxwHqKVKX9Bpi7PwFsy9r3ortvAGyYt04DNrh7v7sPAHcCs5NU\nVqTahLwGGw9syni+Od4nUjcOLncFAMxM87Wkorn7cK21IYU8g20BJmY8Pybel5O7l+xx9dVXqzyV\nl/cjiXwDzBj6emuo/auA48ysxcwagHOAew+wfiJVLZ9u+juAJ4ETzGyjmV1kZp81s01AB3CfmT0Y\nH/shM7sPwN13AwuBh4AXgDvdPRXqi4hUov1eg7n7uUO8dHeOY18HPp3x/D+BjxRcu0CmT5+u8lRe\nSVjSNmZRKmHmlVAPqRypVIre3l6mTZtGa2trWetiZngFdnKIFGTRoitoa5vChRdeR1vbFBYturzc\nVSqYzmBSUVKpFG1tU4CVwMnAWqCDdetWl+1MpjOY1Ize3l5gAlFwEf95TLy/+ijApKJMmzaNaALQ\n4NzytcDmeH/1UYBJRWltbWXhwnlEI0AnAB0sXDiv7B0dhdI1mFSkWulFVICJ7Ic6OaQqpdNpVq1a\nRTqdLndVglGASVl0d/fQ0nIis2ZdSkvLiXR395S7SkGoiSgll06naWk5kR07ljM41tXUNIP+/vU0\nNzeXu3r7UBNRqkpfXx8NDZPIHOsaObKFvr6+8lUqEAWYlNykSZPYtauPzLGugYF+Jk2aVL5KBaIA\nk5IZ7NQA6OpaTFPTDEaPnkxT0wy6uhZXZPMwqYpIGSC1r7u7h87OBTQ0RGevrq7F9Pevp6+vj0mT\nJtVkcIE6OaQEqq1TI5s6OaSi1VOnRjYFmARXT50a2RRgElxzc3PddGpk2+81mJl1EeXZ2OruJ8f7\nxgI9QAvQB3zJ3d/K8d7dwLNEmaf63f2zQ5Sha7A6kE6nq7JTI+hkXzP7KLAd+FlGgF0P/Nndvx8v\n6jDW3b+R471vu/voPL6AAkwqVtBODs+Rm54ox/zt8fbtQM4zE8PnrhepeYVeg33Q3bcCuPv/Ah8c\n4rhGM+s1syfNTAs/SN0p1kDzUO27Fnd/3cw+DDxqZmvd/dVcB15zzTXvb0+fPr2qct9JbVmxYgUr\nVqwoymflNdBsZi3AbzOuwVLAdHffamZHAcvdfdjbTs1sWfwZd+V4TddgUrFKMdCcnZv+XuDCePsC\n4J4clToszkmPmR0JnAasK6SSItWqoNz0wPeAWWb2InB6/Bwzm2JmN8dvbQX+YGZrgN8D/+ru60N8\nCZFKpbmIIvuhuYhScvWQT6MYFGBywOoln0YxqIkoB6Tabz0phJqIUjL1fOtJIRRgckDq+daTQijA\n5IDU860nhdA1mOQl+1aTar31pBC6BpOgli69hQkTjuP00zvf7zVsbm5m6tSpNR9cSekMJsNauvQW\nLr30cqKlhDYBV9HUdH1N9xpmS3IGU9o2GVIqleKyy65k7+VcZzBixNH09fXVTYAloSai5NTd3UN7\newe7do0jeznXgYGN6jXMkwJM9pFOp+nsXMDOnfcAf2Lv5Vw3cOONN+jslSc1EWUfg4PJO3ZMBxYD\nM4AjaGj4IzfddCPz588rbwWriAJM9rH3YPIcYByNjbNZs2Zl2ZdzrTZqIso+9h1MPptly25WcBVA\n3fQypHoaTB6OFkEXCUgzOUQqlAKsjqVSKW6//XZSqVS5q1Kz8kl602VmW81sbca+sWb2kJm9aGa/\nM7MxQ7z3AjN7KT7u/GJWXJJZtOgK2tqmcOGF19HWNoVFiy4vd5VqUrDc9PECEX8AJhOlfFsNTB5i\nkQhdg5VQKpWirW0Ke0+B6mDdutXqKcyhUnPTnwE85O5vufubwEPAmYVUUorrkUceASaQPQWqt7e3\nfJWqUSFz048nmn49aEu8T8qou7uHK6/8NtE/TeYUqM1MmzatfBWrUaFz0+dNuenD2zPH8L+ALqCD\n6P+8LSxcOE/Nw1gxc9Pj7vt9EC20tzbjeQoYF28fBaRyvOccYEnG8yXAnCE+3yW83t5eHzNmsoPH\nj3U+atRE7+npKXfVKlr8+8wrVrIfwXLTA78jSq89Ju7wmBXvkzLZN2HNAGbbmTFjRhlrVduC5aZ3\n923Ad4h6Ep8CrvWos0PKRAlrSk9TpeqQ5hgeGM1FFAlIcxFFKpQCTCQgBVgN0tJClUMBVmO0tFBl\nUSdHDUmlUrS3d8TZoKZTD0sLlYI6OSTOY3gaO3ceBZwN9KClhcpPWaVqwJ45ho+RmYEXxmlpoTLT\nGawG5FoUD46gsXG2ZmqUmc5gVWxwRsYhhxySMccwOoM1NqaVx7ACKMCqVHd3D52dC2hoiCbwdnae\nR1fXDEaObGFgoJ+uriUKrgqgXsQqNNRC5KtXP8H27ds1x7DItHxRndmTO37vhci3b9/O1KlTy1o3\n2Zs6OaqQFiKvHgqwKqT7uqqHrsGqmO7rKg3dDyYSkKZK1TjNjq9eCrAKp9nx1S1RE9HMLge+Ej+9\nxd1vynr9E0QZp16Jd93l7t/N8TlqIuYw1HiXZseXVlnGwczsJKAT+DvgXeBBM7vP3V/JOvRxd/9M\noeXUs6HGu/r6+hRgVSJJE7EVeMrdd7r7buBx4PM5jiso8kXjXbUgSYA9D3wsXsroA8BZRCsKZOsw\nszVmdr+ZtSUor24MdmoAGu+qcgU3Ed19fbyM0cNEyxutAXZnHbYaaHH3/zOzTwF3Ayfk+jzlpo9k\nT+Lt6lpMf/96jXeVUDFz0xdtHMzM/gXY5O5LhjnmVWCKu7+RtV+dHKhTo1KVbRzMzJrjPycCnwPu\nyHp9XMb2NKKA3iu4ZI9cN07qlv/qlnQ2/a/N7HBgAFjg7m+b2Xyi1ShuBr5gZl+NX98BzElYXs1K\np9Ns27aNnTtfIfPGSXVqVDdNlaoAmdddO3b8D+67aWo6Pr5xcjFz5+r/pXLSXMQqNtR11913d9Pe\n3q5rrwqguYhVbKjrrrFjxyq4aoACrMw0mFzbFGBlppsna5uuwSqEbp6sXOrkEAlInRxVQDdN1icF\nWAnopsn6pSZiYOl0mokTT+Cdd34KzAJe1/zCKqMmYgVbuvQW3nlnF/BD4EQgpfmFdURnsIByzdKA\n6Ywa5Wzc+JLOYFVCqbMrVK5b/uFwvvWtixVcdUJNxIByzdJoatrG/PnzylgrKSUFWJFldsdrlobo\nGqyIurt7uPjiSxkxYhy7d2/l1luXMHfuHM3SqHKayVEB0uk048cfy8DAwcCHgVcZOXKALVteUVBV\nOXXTV4Dly5czMLALuIso188KBgbeY82aNWWumZSTAqwIurt7OP/8+cBE4Gygh6jH8ENlrZeUn5qI\nCeUe65oB/JqGhs+yefMGNRGrXDmzSl1uZs/Fj8uGOOYmM9tgZs+Y2SlJyqtEue5IhiNobJzNbbct\nVXDVuaC56eNko8e6+/FmdiqwBOhIWOeKsvdYV3QGa2xMs2bNSlpbW8tbOSm70LnpZwM/A3D3p4Ax\nmbkSa0Gusa5ly5YouARINlXqeeC7ZjYW2EmUm35V1jHjgU0Zz7fE+7YmKLfizJ07h5kzP6mxLtlH\n6Nz0eav23PTNzc0KrBpRNbnpzWwJsNzde+Ln64FPuPvWrPdWbS+i1L6KzU0P3AucHx/TAbyZHVzV\nRLf9y4FKOtD8azN7nmiZ2Pdz05vZJQDu/gDwqpm9DCwFFiQsr2x0278UQgPNedCyQvVNcxED07JC\nUigFWB6U3loKpQAbhtZKlqSUk2MIWitZikGdHDmoU0MyqZOjyNSpIcWiAMtBnRpSLAqwHJQNSopF\n12DDUDYoAWWVSkyBJMNRJ0cCmmMoIdX1GUzd8ZIPncEKkE6neeCBBzj44PGoO15CqcsAG2wWLlp0\nI3/5y8vA9+NX1B0vxVV3TcTceQw7OOSQY9m9+zW6uhYzd+6cktRFqoPWBzsAudbsOvTQj/DjH1/B\nWWedpWsvKaq6aiKm02m2bdu2zyyNd9/dqOCSIOrmDHbDDT/im9/8JxoaJvLuu7toaPg4o0b9NQMD\n/ZqlIcHUxTVYZ+d8br3158AEojSNn2PUqAe4554e2tvbFVwyrHJmlfqamT1vZmvN7D/MrCHr9QvM\n7I9m9nT8uDhJeYVIpVJxcK0EXoz//A0jRhzF2LFjFVwSVMEBZmZHA4uAye5+MlFz85wch97p7pPj\nx62Flleo3t5eojNX5uIMx7Br1yZ1x0twSTs5RgB/ZWYHAx8AXstxTEGn1mJIp9M0NTURNQv3dGrA\nZq677p919pLgCg4wd38N+CGwkSjn/Jvu/kiOQz8fL130SzM7ptDyDtTgYPIll1zPQQc50aIuJwAd\nXHzxeXz96/9QqqpIHUuyfNFhRKuntABvAb8ys3PdPTO7773AHe4+ECcjvR04PdfnFTM3fTqdprNz\nATt2LI/Hu9bS2PgxfvCDRcycOVMrn8iwKiI3vZl9ATjD3efFz78MnOruC4c4/iDgDXc/LMdrRe1F\nXLVqFbNmXcpbb61+f9/o0ZN55JGlTJ06tWjlSH0oVy/iRqDDzEaZmRGdmVJZFTsq4+lsYF2C8vKm\nW/6lUiS5BusFfkW0bNGz8e6bzexaM/t0/PyyuBt/DbAQuDBJZfOlW/6lUtT0QLPuVJZiUMoAkYB0\nw6VIhVKAiQSkABMJSAEmEpACTCQgBZhIQAowkYAUYCIBKcBEAlKAiQSkABMJSAEmEpACTCQgBZhI\nQAowkYAUYCIBKcBEAlKAiQQUOjd9g5ndaWYbzOy/zWxisuoWR7Fy3qm8+igvidC56TuJciEeD/w7\ne9ZqLata/0GovMoROjf9bKJsvhCleMuZ1VekVoXOTT+eaOUF3H038KaZHV5omSJVx90LegCHAb8H\nDic6k/0GODfrmOeAozOevwwcnuOzXA89KvlRaJwkWUJ2JvCKu78BYGZ3AacBmYs/bCZanOs1MxsB\njB48PlOhOedEKl3Q3PTAb4EL4u0vAo8mKE+k6iTK7GtmVxP1HA4ATwPzgG8Dq9z9PjNrBH4OtAN/\nBs5x976klRapFhWROlukVpV0JoeZnWlm683sJTO7KsfrRR2YzqO8r5nZC/EKnA+b2YSQ5WUcd7aZ\nvWdmk0OXZ2Zfir/jc2b2i5DlmdkEM3s0XvD+GTP7VIKyusxsq5mtHeaYm+LfyjNmdkqhZeVTnpmd\na2bPxo8nzOxv8/rgQntHCuh1PIioF7EFGAk8A5yYdcxXgcXx9hyiBdRDlvcJYFS8fWno8uLjDgEe\nA54kGqQP+f2OA1YTdS4BHBm4vKXA/Hi7FXg1QXkfBU4B1g7x+qeA++PtU4GVCX+f+yuvAxgTb5+Z\nb3mlPINNAza4e7+7DwB3Eg1EZyrmwPR+y3P3x9z9nfjpSqJxu2Dlxb4DfA/YmaCsfMubB/zU3d8G\ncPc/BS7vPWB0vH0Y0fhoQdz9CWDbMIfMBn4WH/sUMMbMxoUqz91Xuvtb8dO8fyulDLD3B51jm9m3\nksUcmM6nvEydwIMFlpVXeWbWDhzj7knKybs8olXfPxI3aZ40szMCl3ct8GUz2wTcRzSVLpTs+mzJ\nUZ9QvkKev5Uk42ClUJLxMTM7D5hC1GQMVYYBP2LPsAWE/34HEzUTPw5MBB43s78ZPKMFMBdY5u7/\nZmYdwC+AkwKVVRZmNgO4iKhJuV+lPINtIfpHHnQM+zYhBgemGW5guojlYWYzgX8E/j5u+hRqf+Ud\nSvRjW2FmrxK16e9J0NGR79/nve7+nkfDIy8BxwcsrxP4JURNKmCUmR1ZYHn51CezUyrnv28xmdnJ\nwM3AZ9x9uObrHkkuDA/wInIEey6SG4gukluzjlnAnk6Oc0jW6ZBPee3xMceW4vtlHb8caA/8/c4A\nbou3jwT6gbEBy7sfuCDebgU2J/w7nQQ8N8RrZ7Gnk6ODhJ0ceZQ3EdgAdBzQZyat1AF+gTOBF+OK\nfiPedy3w6Xi7keh/wA1EF5KTApf3MPA60SD5GuDukOVlHfsoCXoR8y2PaEL2C0QL1X8x8N9nK/BE\nHHxPA6cnKOsOorszdhLNGroImA9cknHMT+Kgf7YIf5fDlgfcQjRZYvC30pvP52qgWSQgpQwQCUgB\nJhKQAkwkIAWYSEAKMJGAFGAiASnARAL6fwYejWFDRfGKAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAANYAAADFCAYAAAAooQwbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEDpJREFUeJzt3X+MHOV9x/H3h+NQDxTVEJsfPuyaSBaqgaRBJxuZpHJ+\ntBgDMUJpZSuV0ggVUYX++gPVUREhUlRc0b9IaKhFUBKltRsl5OqAiUOCWlKonZw5u7ZD3ThAsA9a\nA8GklJNizLd/7Cws653dvZ157mZvPy/pdLMzz+w8t96v55lnnuc7igjMrFynzXUFzOYjB5ZZAg4s\nswQcWGYJOLDMEnBgmSXgwDJLwIFlloADyyyB0+e6Aq0sXLgwli1bNtfVMDvFnj17XoqIRZ3KVTKw\nli1bxsTExFxXw+wUkn7eTTk3Bc0ScGCZJdAxsCTdL+mYpAMN635P0kFJb0oaa7PvWkmHJB2WtKms\nSptVXTdnrK8Aa5vWHQBuAB7L20nSEHAPcDWwAtgoaUVv1TRLY3xyiis3P8pFmx7iys2PMj45Vcr7\nduy8iIjHJC1rWvcUgKR2u64EDkfE01nZbcB64Cc91tWsVOOTU3zmgf1MnzgJwNTxaT7zwH4Arn//\naKH3TtkrOAocaXh9FFiVV1jSTcBNAEuXLk1YLRt045NT3LXzEFPHp0/ZNn3iJHftPFQ4sCrTeRER\nWyJiLCLGFi3qeJvArCf1s1SroKp7vs22bqUMrClgScPrC7N1ZnPmrp2H3mr65Vm8YKTwcVIG1o+B\n5ZIuknQGsAHYnvB4Zh11OhuNDA9x61UXFz5Ox2ssSVuBNcBCSUeBzwK/AL4ALAIekrQ3Iq6StBi4\nLyLWRcQbkm4BdgJDwP0RcbBwjc1mqH5N9fzxaU6TOJmTQGl0wQi3XnVx4esrAFUxS9PY2Fh4SJOV\nobnnr5WR4SHuvOGyrgJK0p6IyL13W1fJsYJmZcm7phqSeDOCxSWepRo5sGzeum08v/fvzQie2XxN\nsmNXprvdrEy3je/n67uey91eRs9fOw4sm5e27j6Su62snr92HFg2L+X1/AFdd1QU4cCyeWkoZxzr\nkJQ8qMCBZfPUxlVLZrS+bO4VtHnp89dfBtSutU5GMCSxcdWSt9an5hvEZjPgG8Q27zUOVUp1o7dX\nDizrSyknKZbBnRfWl1oNVapPUqwCB5b1pbzpH2VMUiyDm4LWN7qZ/pF6qFK3HFjWF5qvqVoF1WwM\nVeqWA8v6wlxN/+hVNzOI7weuBY5FxKXZunOAfwKWAc8Cvx8Rr7TY91ngf4GTwBvd9P+btZJ37ZR6\n+kevek3YuQn4QUQsB36Qvc7zoYj4LQeVFZF37VSVa6pmHQMrIh6jluOi0Xrgq9nyV4HrS66X2Tvc\netXFjAwPvWNdla6pmvV6jXVeRLyQLf83cF5OuQC+L+kk8PcRsSXvDZ2w0yB/NEX92qmqIy2adTVW\nMEsx/WDDNdbxiFjQsP2ViDi7xX6jETEl6VzgEeBPsjNgWx4rOJhuG9/PP+x6jsZv5EwSvcyGbscK\n9nqD+H8kXZAd6ALgWKtCETGV/T4GfJtaPnezU4xPTp0SVFCt0RQz0WtgbQc+mS1/Evjn5gKSzpL0\nrvoy8LvUnlJidoq7dh46JajqqjKaYia6eT7WVuDfgYslHZV0I7AZ+B1JPwU+mr1G0mJJO7JdzwP+\nTdI+4EfAQxHx3RR/hPW/dsFT1Z6/drp5jM/GnE0faVH2eWBdtvw08L5CtbOBsXjBSMtUZYLK9vy1\n40G4VgmtutMFfOKKpZXpuJgJD2mySui37vROHFhWGY33q/qdm4JmCfiMZbOmyjkqyubAsllR9RwV\nZXNT0GZF1XNUlM2BZbOi6jkqyubAslnRb/OpinJg2azot/lURbnzwkrXrvfPvYJmMzQ+OcUd2w9y\nfPrEW+uae//mayA1c1PQSlHvTm8Mqrr53PuXx4FlpchLT1Y3X3v/8jiwrBSdAme+9v7l6Wai4/2S\njkk60LDuHEmPSPpp9vuUfBdZubWSDkk6LKldijTrc+0CZz73/uVJlldQ0hBwD3A1sALYKGlFodpa\nZbXqTgc4+8zhSiWDmS3dzCB+LMvS1Gg9sCZb/irwL8BfNpVZCRzOZhIjaVu23096rq1V1qB1p3eS\nMq/gKHCk4fVRYFWPx7M+MEjd6Z0Uvo8VESGp8IOMnbCzPwzS1I8iUuYVnAKWNLy+MFvXUkRsiYix\niBhbtGhRj9WylOr3qqaOTxO8ffN3fDL3n3VgJcsrCPwYWC7pIklnABuy/axPDdrUjyKS5RWMiDeA\nW4CdwFPANyLiYJo/w1Ian5ziys2PtkxPBoN387cbyfIKZq93ADuay1n/aJ7528qg3fzthkdeWFud\nhioN4s3fbnh0u7XVrpk36l7BXA4saysv9fPoghEe3/ThOahRf3BT0NoatJm/ZfEZy97imb/lcWAZ\n0DnvnwNpZtwUNMA3f8vmM9YAa2z6zaenKVaBA2tAdXPjF3zzt1duCg6oTjd+wb1/RfiMNaDaNfEE\n7v0ryIE1oHzjNy03BQeUb/ym5TPWgPKN37QcWAMgb0SFb/ym48Ca5wbtSYpVUegaS9KfSTog6aCk\nP2+xfY2kVyXtzX5uL3I8mzmPqJgbPZ+xJF0K/BG1/IG/Ar4r6cGIONxU9IcRcW2BOloBg/Ykxaoo\ncsb6TWB3RLye5bf4V+CGcqplZRm0JylWRZHAOgB8UNK7JZ1JLdfFkhblVkv6D0kPS7ok780k3SRp\nQtLEiy++WKBa1sjd6nOj56ZgRDwl6W+A7wH/B+wFmsfIPAksjYjXJK0DxoHlOe+3BdgCMDY2VjgB\nqNW4W31uKKKc77CkvwaORsTftSnzLDAWES+1e6+xsbGYmJgopV5mZZK0JyLGOpUr2it4bvZ7KbXr\nq39s2n6+JGXLK7PjvVzkmGb9oOh9rG9JejdwAvh0RByXdDNARNwLfBz4Y0lvANPAhijrFGlWYYUC\nKyI+2GLdvQ3LXwS+WOQYZv3Ig3DNEnBgmSXgwDJLwIFlloBHt/cBP0Wx/ziwKs7TPvqTm4IV52kf\n/cmBVXGe9tGf3BSsoMZrqtMkTrYYrOJpH9XmwKqY5muqVkHlaR/V58CqmDu2H2yZoXZI4s0I9wr2\nCQdWhYxPTnF8+kTLbW9G8Mzma2a5RtYrd15USLuePl9T9RefsSqg3lnRKuVzna+p+osDaw6NT07x\nue8c5JXXWzf/6s4+c9jXVH3GgTVHun0+1cjwEJ+9LjcHj1VU6oSdknS3pMNZpqbLixxvPunm+VSj\nC0a484bLfLbqQ6kTdl5NLSvTcmAV8KXs98DrNHLCj9Ppb6kTdq4HvhY1u4AFki4ocMx5o10vn28A\n97/UCTtHgSMNr49m604xaAk7WyXSBFgwMuzm3zyQOmHnTN5voBJ2OpHm/FY0S9OXgS/D2wk7m4pM\n8c6z2IXZOgM/n2oeKxRYks6NiGMNCTuvaCqyHbhF0jZqnRavRsQLRY7Zbzz7dzClTti5g9q112Hg\ndeBTBY/XVzz7d3ClTtgZwKeLHKOftZv968Ca3zzyomS3je9n6+4jLedR1Xn27/znwCrRbeP7+fqu\n5zqW80j1+c/TRkq0dfeRjmV883cw+IxVgnrPX7vmn8C9ggPEgVVQN6PUhyR+due6WayVzTU3BQvq\nZpT6xlWtHs1s85nPWAW16+Ebkti4agmfv/6yWayRVYEDq6DFC0ZaTqn3tI/B5qZgQa1Gqbvnz3zG\nKsij1K0VB1YJPErdmrkpaJaAA8ssATcF2/BcKuuVAyuH51JZEUXzCv5FllPwgKStkn6tafsaSa9K\n2pv93F6surPHT1K0IorkFRwF/hRYERHTkr4BbAC+0lT0hxFxbe9VnF2d8qh7LpV1o2hT8HRgRNIJ\n4Ezg+eJVmjvjk1Pc+s19nDiZP0rdc6msGz03BSNiCvhb4DngBWqJYr7XoujqLL30w5Jyk5BXIa/g\n575zsG1QeUSFdavnwJJ0NrVMtxcBi4GzJP1BU7EngaUR8V7gC8B43vtFxJaIGIuIsUWLFvVarULa\nPfXDedRtJop0XnwUeCYiXoyIE8ADwOrGAhHxy4h4LVveAQxLWljgmHPm8U0fdlBZ14oE1nPAFZLO\nlCTgI8BTjQUknZ9tQ9LK7HgvFzhmUgtGhme03ixPkWus3cA3qTX39mfvtUXSzfXcgsDHgQOS9gF3\nAxuylGiVdMfHLmH4NL1j3fBp4o6P+flUNjOq4vd8bGwsJiYm5uTYHm1h7UjaExFjncp55EUTj1S3\nMngQrlkCDiyzBBxYZgk4sMwScGCZJeDAMkvAgWWWgAPLLAEHllkCDiyzBBxYZgk4sMwScGCZJeDA\nMkugL6eNeM6UVV3qhJ2SdLekw1mmpsuLVfftDLVTx6cJ3s5QOz45VfStzUpTJEtTPWHnWERcCgxR\nS9jZ6GpgefZzE/ClXo9X5wy11g+KXmPVE3aeTuuEneuBr0XNLmCBpAuKHDAvE60z1FqVpE7YOQoc\naXh9NFt3im4TduZlonWGWquS1Ak7u9Ztwk4/89f6QdKEncAUsKTh9YXZup5d//5R7rzhMkYXjCCc\nodaqqUh3+1sJO4Fpagk7m3OWbQdukbQNWEWtufhCgWMCzqRk1ddzYEXEbkn1hJ1vAJNkCTuz7fcC\nO4B1wGHgdeBThWts1gecsNNsBrpN2OkhTWYJOLDMEqhkU1DSi8DPOxRbCLw0C9WZCdepO1WsE3RX\nr9+IiI4PcKtkYHVD0kQ3bd3Z5Dp1p4p1gnLr5aagWQIOLLME+jmwtsx1BVpwnbpTxTpBifXq22ss\nsyrr5zOWWWU5sMwSqGRgSVor6VA2pX9Ti+25U/477ZuwTp/I6rJf0hOS3tew7dls/V5JpY3V6qJO\nayS9mh13r6Tbu903YZ1ubajPAUknJZ2TbSv9c5J0v6Rjkg7kbE/zXYqISv1Qm+L/M+A9wBnAPmBF\nU5l1wMOAgCuA3d3um7BOq4Gzs+Wr63XKXj8LLJyDz2kN8GAv+6aqU1P564BHE39Ovw1cDhzI2Z7k\nu1TFM9ZK4HBEPB0RvwK2UZtQ2Shvyn83+yapU0Q8ERGvZC93UZt7llKRv3XOPqcmG4GtJRw3V0Q8\nBvyiTZEk36UqBlY30/nzynSdCiBBnRrdSO1/wboAvi9pj6SbSqjPTOq0OmviPCzpkhnum6pOZPP4\n1gLfalid4nPqJMl3qS/zClaZpA9RC6wPNKz+QERMSToXeETSf2b/k6b2JLA0Il6TtA4Yp5Yxqwqu\nAx6PiMazyVx9TqWr4hmrm+n8eWVKTwUwgzoh6b3AfcD6iHi5vj5qiXeIiGPAt6k1M5LXKSJ+GRGv\nZcs7gGFJC7v9e1LUqcEGmpqBiT6nTtJ8l8q8UCzpYvN04GlqSWrqF42XNJW5hndecP6o230T1mkp\ntZnSq5vWnwW8q2H5CWDtLNXpfN4eBLCSWjoFzeXnlJX7dWrXPWel/pyy91tGfudFku/SnAdSzh+7\nDvgvar0yf5Wtuxm4OVsWcE+2fT+1pKG5+85Sne4DXgH2Zj8T2fr3ZP8o+4CDs1ynW7Jj7qPWobK6\n3b6zUafs9R8C25r2S/I5UTsrvgCcoHaddONsfJc8pMksgSpeY5n1PQeWWQIOLLMEHFhmCTiwzBJw\nYJkl4MAyS+D/ARn81ehNPdIfAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f56ecc14b50>"
+       "<matplotlib.figure.Figure at 0x1a552c7c0b8>"
       ]
      },
      "metadata": {},
@@ -164,14 +158,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.1365"
+       "9.2937"
       ]
      },
      "execution_count": 9,
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -200,9 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -219,7 +211,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -249,21 +241,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   },
   "nav_menu": {},
   "toc": {
@@ -281,5 +273,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
